fix width on mobile

--- a/src/app/public/style.css
+++ b/src/app/public/style.css
@@ -26,6 +26,7 @@ a:hover {
 
 body {
   display: flex;
+  width: 100vw;
 }
 
 #main-page {
@@ -40,7 +41,8 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  max-width: 100vw;
+  /* max-width: 1280px; */
   padding: 2rem;
 }
 
